HBP-1 New components

--- a/angular.json
+++ b/angular.json
@@ -26,9 +26,7 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.scss"
-            ],
+            "styles": ["src/styles.scss", "node_modules/bulma/css/bulma.min.css"],
             "scripts": [],
             "es5BrowserSupport": true
           },
