--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
+    "ts-mockito": "^2.3.1",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
   }
